# RAST_corridor_planning

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  package.xml  readme.md
cfg/: cfg (another copy).yaml  cfg.yaml  cfg_2.yaml
cfg/tracker_pid/: sim_pid.yaml
include/: risk_aware_kinodynamic_a_star.h
include/CorridorMiniSnap/: corridor_minisnap (copy).h  corridor_minisnap.h
include/decomp_ros_msgs/: DynPolyhedron.h  DynPolyhedronArray.h  Ellipsoid.h  EllipsoidArray.h  Polyhedron.h  PolyhedronArray.h
include/fsto/: config.h  fsto.h
launch/: planning.launch  quick_test.launch
rviz/: boxes.rviz  cluster_pointcloud.rviz  cluster_velocity.rviz
src/: corridor_minisnap.cpp  map_sim_example.cpp  planning_node.cpp
